# acs-aggregate

./: .gitignore  BOUNDARIES.md  LICENSE  README.md  chicago_2010pop_by_2020policedistricts.csv  notebook.ipynb  pyproject.toml  requirements.txt
crosswalks/judicial_districts/: COUNTY_DISTRICT_README.md  county_district_xref.csv  population_by_district.ipynb  population_by_district_acs2018_5yr.csv  race_by_district.ipynb
crosswalks/zip_to_zcta/: ZIP_ZCTA_README.md  build_crosswalk.ipynb  geonames_us_zips.csv  zcta_review.csv  zip_zcta_xref.csv
generalized/: GENERALIZED_README.md  chicago_2010blocks_2020policedistricts_key.csv  notebook.ipynb
