[tool.poetry]
name = "acs-aggregate"
version = "0.1.0"
description = "Tools to help aggregate American Community Survey data to non-Census geographies"
authors = ["Joe Germuska <JoeGermuska@Northwestern.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.5"
cenpy = "^1.0.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.1.5"
folium = "^0.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
