[tool.poetry]
name = "acs-aggregate"
version = "0.1.0"
description = "Tools to help aggregate American Community Survey data to non-Census geographies"
authors = ["Joe Germuska <JoeGermuska@Northwestern.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.5"
requests = "^2.24.0"
cenpy = {version = "^1.0.0", extras = ["python-Levenshtein"]}
python-Levenshtein = "^0.12.0"
census-data-aggregator = "^0.0.6"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.1.5"
folium = "^0.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
